2.0.6/_sources/plugins/available/diversity/beta.txt
beta: Beta diversity
====================

Computes a user-specified beta diversity metric for all pairs of samples in a feature table.

.. raw:: html

   <table class="table action-signature">
     
     <thead>
       <tr>
         <th colspan="3">Inputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">table</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">FeatureTable[Frequency] % Properties(['uniform-sampling'])</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="3">Parameters</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">metric</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Str % Choices({'braycurtis', 'canberra', 'chebyshev', 'cityblock', 'correlation', 'cosine', 'dice', 'euclidean', 'hamming', 'jaccard', 'kulsinski', 'mahalanobis', 'matching', 'rogerstanimoto', 'russellrao', 'seuclidean', 'sokalmichener', 'sokalsneath', 'sqeuclidean', 'wminkowski', 'yule'})</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="3">Outputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">distance_matrix</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">DistanceMatrix</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">N/A</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
   </table>